Adding allow flyers and a few mods

--- a/arkmanager-user.cfg
+++ b/arkmanager-user.cfg
@@ -17,9 +17,11 @@ ark_MaxPlayers=${NBPLAYERS}
 arkflag_log=""
 # Comment it out if you want battle eye
 arkflag_NoBattlEye=true
+# Allowing cave flyers
+arkflag_ForceAllowCaveFlyers=true
 
-# ----- Mods ----- #
-ark_GameModIds="812655342,849372965,731604991,793605978"
+ # ----- Mods ----- #
+ark_GameModIds="812655342,849372965,731604991,793605978,1707516129,1184763409"
 # Mod OS Selection
 mod_branch=Windows
 
